First initial commit

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,70 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar{
+  text-align: center;
+  background-color: blue;
   color: white;
+  margin-bottom: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar a{
+  color: white;
+  margin-right: 10px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar h1{
+  margin-bottom: 0px;
+}
+
+.AboutMe a{
+  margin-left: 6px;
+}
+
+.AboutMe h1{
+  text-align: center;
+  margin: 0px;
+}
+
+.AboutMe p{
+  margin-bottom: 0px;
+}
+
+.studies{
+  /* background-color: rgb(161, 218, 218); */
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.studies hr{
+  margin: 0px;
+}
+.studies h1{
+  /* margin-bottom: 0px; */
+  margin: 0px;
+}
+.studies p{
+  text-align: left;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.footer{
+  margin: 0px;
+  background-color: blue;
+  text-align: center;
+}
+
+.footer h4{
+  margin: 0px;
+  color: aliceblue;
+  text-align: left;
+  
+}
+
+.footer a{
+  color: aliceblue;
+  text-align: center;
+  margin-left: 6px;
 }
